# gmockextlinux

./: CMakeLists.txt  README.md
include/: gmock-linux.h  gmock-module.h
src/: gmock-linux.cpp
tests/: test_bypass.cpp  test_main.cpp  test_open.cpp  test_read_write.cpp  test_stat.cpp
